<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/number"-->
<!--        android:layout_alignBaseline="@id/city"-->
<!--        android:layout_marginBottom="2sp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:layout_centerVertical="true"
        android:layout_marginLeft="28sp"
        android:textColor="#000"
        android:textSize="20sp"/>

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id= "@+id/weather"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/map"
        android:layout_marginRight="18sp"
        android:src="@drawable/weather_icon"
        android:scaleType="fitXY"
        />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id= "@+id/map"
        android:layout_centerVertical="true"
        android:layout_marginRight="18sp"
        android:src="@drawable/map_icon"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        />


</RelativeLayout>