<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        android:layout_alignBaseline="@id/name"
        android:layout_marginBottom="2sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_centerVertical="true"
        android:layout_marginLeft="28sp"
        android:textColor="#000"
        android:textSize="20sp"/>

    <ImageView
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:id= "@+id/details"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/remove"
        android:layout_marginRight="18sp"
        android:src="@drawable/details"
        />

    <ImageView
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:id= "@+id/remove"
        android:layout_centerVertical="true"
        android:layout_marginRight="18sp"
        android:src="@drawable/remove"
        android:layout_alignParentRight="true"/>


</RelativeLayout>